tests/samples/negative/visibility/private_reexport_type.ax
module private_reexport_type;

import samplelib.reexport_facade as facade;

fn main() -> i32 {
    let value: facade.SecretCount = 1;
    return value;
}
